# demucs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  uv.toml
.github/workflows/: pre-commit.yml
client/: runpod_client.py
local-run/: README.md
runpod-worker/: Dockerfile  handler.py  requirements.txt  runpod.yaml
