[project]
name = "demucs-toolkit"
version = "0.1.0"
description = "Local Demucs runner plus RunPod client utilities"
authors = [{ name = "Nigel Stuke" }]
requires-python = ">=3.10"
dependencies = [
    "demucs>=4.0.0",
    "requests>=2.32",
    "soundfile>=0.12.1",
    "torch==2.8.0",
    "torchaudio==2.4.1",
    "typer>=0.12.3",
    "dynaconf>=3.2",
]

[project.scripts]
runpod-demucs = "client.runpod_client:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pyrefly>=0.44.2",
]
